# real-time-e-commerce-events-analytics

./: .gitignore  Readme.md  commands.txt  docker-compose.yml  pip  pyproject.toml  requirements.txt  run_pipeline.sh
analytics/: analytics.duckdb  load_gold.py  load_gold_to_duckdb.py  verify.py
analytics/loader/: load_postgres.py
analytics/sql/: 01_create_tables.sql  dashboard.sql  emp.sql
docker/postgres/: init.sql
src/kafka/: avro_consumer.py  avro_producer.py
src/model/: product_viewed.avsc
src/postgres/: config.py  incremental_loader.py
src/producer/: app.py
src/producer/generators/: products.py
src/spark/: gold_spark_pipeline.py  read.py  silver_spark_pipeline.py  spark_app.py
src/spark/gold/: gold_category_metrics.py  gold_events_per_minute.py
superset/: Dockerfile
