[project]
name = "ecommerce-streaming"
version = "0.1.0"
description = "Real-time ecommerce analytics event generator"
requires-python = ">=3.11"

dependencies = [
    "faker>=37.0.0",
    "confluent-kafka>=2.11.0",
    "pydantic>=2.11.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]